Updates code-format-settings documentation (#158)
* Updates code-format-settings documentation

Signed-off-by: Sander van der Heijden <sander.van.der.heijden@alliander.com>

* Add Intellij instructions

Signed-off-by: Gerben Kroes <gerben@kroesctrl.nl>

---------

Signed-off-by: Sander van der Heijden <sander.van.der.heijden@alliander.com>
Signed-off-by: Gerben Kroes <gerben@kroesctrl.nl>
Co-authored-by: Gerben Kroes <gerben@kroesctrl.nl>